chore: modify NodeDataConverter